syntax = "proto3";

package kyve.bundles.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/KYVENetwork/chain/x/bundles/types";

// BundleStatus ...
enum BundleStatus {
  option (gogoproto.goproto_enum_prefix) = false;

  // BUNDLE_STATUS_UNSPECIFIED ...
  BUNDLE_STATUS_UNSPECIFIED = 0;
  // BUNDLE_STATUS_VALID ...
  BUNDLE_STATUS_VALID = 1;
  // BUNDLE_STATUS_INVALID ...
  BUNDLE_STATUS_INVALID = 2;
  // BUNDLE_STATUS_NO_FUNDS ...
  BUNDLE_STATUS_NO_FUNDS = 3;
  // BUNDLE_STATUS_NO_QUORUM ...
  BUNDLE_STATUS_NO_QUORUM = 4;
}

// BundleProposal ...
message BundleProposal {
  // pool_id ...
  uint64 pool_id = 1;
  // storage_id ...
  string storage_id = 2;
  // uploader ...
  string uploader = 3;
  // next_uploader ...
  string next_uploader = 4;
  // byte_size ...
  uint64 byte_size = 5;
  // to_height ...
  uint64 to_height = 6;
  // to_key ...
  string to_key = 7;
  // to_value ...
  string to_value = 8;
  // bundle_hash ...
  string bundle_hash = 9;
  // created_at ...
  uint64 created_at = 10;
  // voters_valid ...
  repeated string voters_valid = 11;
  // voters_invalid ...
  repeated string voters_invalid = 12;
  // voters_abstain ...
  repeated string voters_abstain = 13;
}

// Proposal ...
message FinalizedBundle {
  // pool_id ...
  uint64 pool_id = 1;
  // id ...
  uint64 id = 2;
  // storage_id ...
  string storage_id = 3;
  // uploader ...
  string uploader = 4;
  // from_height ...
  uint64 from_height = 5;
  // to_height ...
  uint64 to_height = 6;
  // key ...
  string key = 7;
  // value ...
  string value = 8;
  // bundle_hash ...
  string bundle_hash = 9;
  // finalized_at ...
  uint64 finalized_at = 10;
}
